--- a/canvas/style.css
+++ b/canvas/style.css
@@ -1,25 +1,82 @@
+ul,ol{list-style: none;}
+*{margin: 0; padding: 0;}
 #xxx{
-    background: green;
     display: block;
   }
   
 body{
     margin: 0px;
   }
-  
+ 
+.icon {
+    width: 1em; height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+ } 
   
 .actions{
     position: fixed;
-    bottom: 0;
+    top: 0;
     left: 0;
+    padding: 20px;
 }
-.actions > #brush{
-    display: none;
+.actions svg{
+    width: 1.5em;
+    height: 1.5em;
+    margin: 0 10px;
 }
-  
-.actions.x > #brush{
-    display: inline-block;
+.actions svg.active{
+    fill: red;
+    transform: scale(1.2);
+    transition: all 0.3s;
 }
-.actions.x > #eraser{
-    display: none
+.colors{
+    position: fixed;
+    top:60px;
+    left: 28px;
+}
+.colors >li{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
+    margin: 10px 0;
+}
+.colors >li.red{
+    background: red;
+}
+.colors >li.green{
+    background: green;
+}
+.colors >li.blue{
+    background: blue;
+}
+.colors >li.active{
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.95);
+    transform: scale(1.2);
+    transition: all 0.3s;
+}
+.sizes{
+    position: fixed;
+    top:55px;
+    right: 20px;
+}
+.sizes >li{
+    margin: 20px 0;
+}
+.sizes > .size1{
+    height: 0;
+    width: 20px;
+    border-top: 3px solid black;
+}
+.sizes > .size2{
+    height: 0;
+    width: 20px;
+    border-top: 6px solid black;
+}
+.sizes > .size3{
+    height: 0;
+    width: 20px;
+    border-top: 10px solid black;
 }
