--- a/resume4/main.css
+++ b/resume4/main.css
@@ -6,8 +6,11 @@ hr{height: 0;border: none;border-top: 1px solid #dedede;}
 ul,ol{list-style: none;}
 .clearfix::after{content: '';display: block;clear: both;}
 /*上面不要看*/
-.topNavBar{font-weight: bold;padding: 20px 0;position: fixed;top: 0;left: 0;width: 100%;}
+.topNavBar{font-weight: bold;padding: 20px 0;position: fixed;top: 0;left: 0;width: 100%;
+    transition: all 0.5s;color: #b7b7b7;}
 .topNavBar-inner{padding: 0 16px;}
+.topNavBar.sticky{background: white;padding: 10px 0;z-index: 1;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);color: #3d4451;}
 .topNavBar .logo{font-family:  "Hiragino Kaku Gothic Std";font-size: 22px;padding-top: 1px;}
 .topNavBar .logo .rs{color: rgb(232,103,107);margin-right: 4px;}
 .topNavBar .logo .card{color: rgb(154,157,162);}
@@ -15,7 +18,7 @@ ul,ol{list-style: none;}
 .topNavBar nav a{color: rgba(255, 255, 255, 0.7);text-decoration: none;}
 .topNavBar nav ul{list-style: none;padding: 0;margin: 0;}
 .topNavBar nav ul>li{float: left;margin: 0 17px;}
-.topNavBar nav ul>li>a{border-bottom: 3px solid transparent;}
+.topNavBar nav ul>li>a{border-bottom: 3px solid transparent;color: inherit;}
 .topNavBar nav ul>li>a:hover{border-bottom-color: #DC6465;}
 
 .banner{height: 515px;background-image: url(./img/rs-cover.jpg);background-position: center center;block-size: cover;}
