--- a/resume4/main.css
+++ b/resume4/main.css
@@ -5,7 +5,16 @@ h1,h2,h3,h4,h5,h6{font-weight: normal;}
 hr{height: 0;border: none;border-top: 1px solid #dedede;}
 ul,ol{list-style: none;}
 .clearfix::after{content: '';display: block;clear: both;}
-/*上面不要看*/
+
+[data-x].offset{
+    transform: translateY(100px);
+}
+[data-x]{
+    transform: translateY(0);
+    transition: all 0.5s;
+}
+
+
 .topNavBar{font-weight: bold;padding: 20px 0;position: fixed;top: 0;left: 0;width: 100%;
     transition: all 0.5s;color: #b7b7b7;}
 .topNavBar-inner{padding: 0 16px;}
@@ -18,7 +27,9 @@ ul,ol{list-style: none;}
 .topNavBar nav > ul{list-style: none;padding: 0;margin: 0;}
 .topNavBar nav > ul > li{float: left;margin: 0 17px;position: relative;}
 .topNavBar nav > ul > li > a{font-size: 12px; font-weight: bold; border-top: 3px solid transparent;padding: 5px 0;  border-bottom: 3px solid transparent;color: inherit;position: relative;}
-.topNavBar nav > ul > li.active > a::after{content: '';display: block;position: relative;top:100%;left: 0;width: 100%;background: #e06567;height: 3px;animation: menuSlide 0.3s;}
+.topNavBar nav > ul > li.active > a::after,
+.topNavBar nav > ul > li.highlight > a::after{
+    content: '';display: block;position: relative;top:100%;left: 0;width: 100%;background: #e06567;height: 3px;animation: menuSlide 0.3s;}
 @keyframes menuSlide{
     0%{width: 0;}
     100%{width: 100%;}
@@ -83,9 +94,14 @@ section.portfolio >h2{text-align: center;color: #3d4451;font-size: 34px;line-hei
 section.skills >ol{background: white;box-shadow: 1px -1px 26px -6px rgba(0,0,0,0.58);padding: 42px 50px 15px;margin-top: 30px;}
 section.skills >ol >li{float: left;width: 48%;box-sizing: border-box;}
 section.skills >ol >li:nth-child(even){float: right;}
-section.skills >h3{font-size: 14px;line-height: 1.1;padding-right: 40px;}
-section.skills .progressBar{height: 5px;background: #FAE1E1;border-radius: 4px;margin: 4px 0 40px;}
-section.skills .progressBar >.progress{height: 100%;background:#E6686A;width: 70%;border-radius: 4px;}
+section.skills >h3{font-size: 14px;line-height: 1.1;padding-right: 40px;overflow: hidden;}
+section.skills .progressBar { height: 5px; background: #FAE1E1; 
+    border-radius: 2px; margin: 4px 0 40px; overflow: hidden; }
+section.skills .progressBar > .progress { height: 100%; background: #E6686A; 
+    width: 70%; border-radius: 2px; transform: translateX(0); transition: all 1s; }
+section.skills.offset .progress{
+    transform: translateX(-100%);
+}
 section.portfolio{text-align: center;margin-bottom: 30px;}
 section.portfolio >nav{text-align: center;display: inline-block;vertical-align: top;}
 section.portfolio >nav >ol{display: inline-block;vertical-align: top;margin-top: 30px;}
